| Summary: | ASTERISK-24745: [patch]Add no_answer to ARI hangup causes | ||
| Reporter: | Ben Merrills (skrusty) | Labels: | |
| Date Opened: | 2015-02-02 09:51:19.000-0600 | Date Closed: | 2015-02-08 21:11:53.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 13.1.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) add_no_answer_ari_hangup_cause.diff | |
| Description: | Added another cause to ARI / Channels / Hangup (delete) reason.
Added "no_answer" which maps to AST_CAUSE_NOANSWER, as this was not previously covered by the existing hangup causes. | ||
| Comments: | By: Ben Merrills (skrusty) 2015-02-02 09:57:02.661-0600 waiting on agreement approval before submitting patch. By: Rusty Newton (rnewton) 2015-02-02 15:40:56.813-0600 After your license agreement is accepted, attach the patch and follow the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Press Send Back or Enter Feedback to make sure the issue gets back to us. Thanks! By: Ben Merrills (skrusty) 2015-02-03 10:33:36.014-0600 added to review board: https://reviewboard.asterisk.org/r/4400/ By: Rusty Newton (rnewton) 2015-02-03 17:00:38.705-0600 Thanks! Also, thanks for filling our the Reviewboard description and testing fields so thoroughly. By: Matt Jordan (mjordan) 2015-02-08 21:11:38.104-0600 Thanks for the contribution! | ||