res/ari/resource_channels.c
@@ -704,6 +704,8 @@ void ast_ari_channels_hangup(struct ast_variable *headers,
 		cause = AST_CAUSE_BUSY;
 	} else if (!strcmp(args->reason, "congestion")) {
 		cause = AST_CAUSE_CONGESTION;
+	} else if (!strcmp(args->reason, "no_answer")) {
+		cause = AST_CAUSE_NOANSWER;
 	} else {
 		ast_ari_response_error(
 			response, 400, "Invalid Reason",
